# foliotracker

./: .env.example  .gitignore  README.md  TODOS.md  pyproject.toml
app/: __init__.py  agent.py
app/agents/company/: company_profile_agent.py  management_agent.py  moat_agent.py  product_agent.py
app/agents/financials/: cashflow_agent.py  financial_statement_agent.py  growth_agent.py  ratios_agent.py
app/agents/governance/: insider_agent.py  institutional_agent.py  sec_agent.py
app/agents/market/: competitors_agent.py  macro_agent.py  news_agent.py  sentiment_agent.py
app/configs/: models.py  settings.py
app/memory/: company_memory.py  portfolio_memory.py  research_memory.py  session_memory.py  ticker_memory.py
app/schemas/: __init__.py  company.py  competitors.py  evidence.py  financials.py  news.py  phase0.py  report.py  ticker.py
app/services/: evidence.py  financial_math.py  phase0_cache.py  phase0_pipeline.py  phase0_session.py  ranking.py
app/tools/ai/: classify.py  (+2 more)
app/workflows/: competitor_analysis.py  document_ingestion.py  earnings_analysis.py  filing_analysis.py  report_generation.py  search_extract.py
docs/: architecture.md  implementation-status.md
evaluations/: __init__.py
evaluations/phase0/: README.md  __init__.py  run.py
infra/: REPO_SETUP.md
tests/: conftest.py
tests/unit/: test_aggregator.py  test_evidence_from_metrics.py  test_phase0_cache.py  test_phase0_pipeline.py  test_session_clear.py  test_settings.py  test_thesis_interactions_api.py  test_thesis_schema_invariants.py  test_ticker.py  test_yahoo_finance_parse.py
(+40 files in other folders)
